Update for game version 0.26.1